
include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libXmL.la
noinst_HEADERS = Folder.h FolderP.h Grid.h GridP.h Progress.h ProgressP.h \
	Tree.h TreeP.h XmL.h

libXmL_la_SOURCES = Folder.c Grid.c GridUtil.c Progress.c Tree.c XmL.c

CFLAGS += -I$(top_srcdir)/microline

### DO NOT REMOVE THIS LINE, IT IS USED BY MAKEDEPEND ###
